# Trueferral-Handover

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE_AUDIT_PACK.ps1  FIX_ALL_BLOCKERS.ps1  REMINDER.ps1  SESSION_HANDOFF.ps1  SESSION_RESUME.ps1  WORK_WITH_REMINDER.ps1  alembic.ini  api_endpoints.py  introflow diagnostic.ps1  package-lock.json  pyproject.toml  requirements-dev.txt  requirements-step1.txt  step1.py  structure.txt  write_sprint4.py  write_ui.js
alembic/: env.py
frontend/: next.config.ts  package-lock.json  package.json  trust_engine.jsx
handoffs/: auditpack_2026-02-01_05-27-24.md  auditpack_2026-02-01_05-28-02.md  auditpack_2026-02-01_05-34-39.md  auditpack_2026-02-01_05-36-15.md  auditpack_2026-02-01_08-10-38.md  auditpack_2026-02-01_08-17-40.md  auditpack_2026-02-01_08-21-38.md  handoff_2026-01-31_08-20-35.md  handoff_2026-01-31_08-23-23.md  handoff_2026-01-31_08-25-40.md  handoff_2026-01-31_08-37-25.md  handoff_2026-01-31_08-49-18.md  handoff_2026-02-01_05-34-38.md  handoff_2026-02-01_05-36-15.md  handoff_2026-02-01_05-59-32.md  handoff_2026-02-01_06-00-28.md  handoff_2026-02-01_07-00-17.md  handoff_2026-02-01_07-32-39.md  handoff_2026-02-01_07-46-42.md  handoff_2026-02-01_08-09-58.md  handoff_2026-02-01_08-10-38.md  handoff_2026-02-01_08-58-22.md  handoff_2026-02-02_00-50-32.md
scripts/: acceptance.ps1  bootstrap.ps1  doctor.py  encoding_check.ps1  regression_gate.ps1  setup_new_machine.ps1  verify_milestone.sh  write_badges.py  write_confirm_page.py  write_intro_room.py  write_intro_room_v2.py  write_queue.py  write_readiness.py  write_receipt.py  (+4 more)
(+169 files in other folders)
